k8s-rpi-apps-ingress/transmission-ingress/service-transmission.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-rpi-transmission-shared
  annotations:
    service.cilium.io/global: "true"      
  labels:
    app.kubernetes.io/name: transmission
spec:
  type: ClusterIP
  ports:
  - port: 9091
    targetPort: tr-ui
    protocol: TCP
    name: tr-ui
  selector:
    app.kubernetes.io/name: transmission
